# itpseq

./: LICENSE  README.md  pyproject.toml
.github/workflows/: cross-platform-testing.yml  publish-to-pypi.yml
docs/: api.rst  conf.py  gallery.rst  index.rst  requirements.txt  tutorials.rst
docs/_build/html/: .buildinfo  api.html  gallery.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html  tutorials.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  tutorial.rst.txt
docs/_build/html/_sources/api/: index.rst.txt
docs/_build/html/_sources/user_guide/: command_line.rst.txt  index.rst.txt  preprocessing.rst.txt  tutorials.rst.txt  whatis_itpseq.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/api/: dataset.html  index.html  replicate.html  sample.html
docs/_build/html/notebooks/: itoeprint_tutorial.html  itpseq_tutorial.html  manual_graph_tutorial.html  report_tutorial.html  report_tutorial.ipynb
docs/_build/html/user_guide/: command_line.html  index.html  installation.html  loading_data.html  preprocessing.html  tutorials.html  whatis_itpseq.html
docs/_static/css/: itpseq.css
docs/api/: dataset.rst  funcs.rst  index.rst  replicate.rst  sample.rst
docs/case_studies/: index.rst  tetracenomycin.rst
docs/notebooks/: itoeprint_tutorial.ipynb  itpseq_tutorial.ipynb  manual_graph_tutorial.ipynb  report_tutorial.ipynb
docs/user_guide/: command_line.rst  index.rst  installation.rst  loading_data.rst  preprocessing.rst  whatis_itpseq.rst
itpseq/: __init__.py  __main__.py  config.py  core.py  parse_filter_fastq.py  parsing.py  plotting.py  processing.py  requirements.txt  utils.py
itpseq/static/: report-html.css  report-pdf.css
itpseq/templates/: report.html
tests/: conftest.py  pytest.ini  test_00_cli.py  test_01_parsing.py  test_02_loading.py  test_03_analysis.py  test_04_plots.py  test_05_report.py  test_06_utils.py
tests/test_data/fake_output_data/tcx_a1_ATG/: nnn15_noa1.aa.itp.txt  nnn15_noa1.itp.json  nnn15_noa1.nuc.itp.txt
tests/test_data/tcx_small_test/: nnn15_noa1.aa.itp.txt  nnn15_noa1.itp.json  nnn15_noa1.nuc.itp.txt  nnn15_noa2.aa.itp.txt  nnn15_noa2.itp.json  nnn15_noa2.nuc.itp.txt  nnn15_noa3.aa.itp.txt  nnn15_noa3.itp.json  nnn15_noa3.nuc.itp.txt  nnn15_tcx1.aa.itp.txt  nnn15_tcx1.itp.json  nnn15_tcx1.nuc.itp.txt  nnn15_tcx2.aa.itp.txt  nnn15_tcx2.itp.json  nnn15_tcx2.nuc.itp.txt  nnn15_tcx3.aa.itp.txt  nnn15_tcx3.itp.json  nnn15_tcx3.nuc.itp.txt  samples.json
